--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body {
 #header {
     font-size: 40px;
     margin-bottom: 40px;
-    background-color: #1F2937;
+    background-color: #080001;
     font-weight: bold;
 }
   
@@ -57,7 +57,7 @@ h3 {
     font-family: CursedTimer;
     width: 155px;
     height: 82px;
-    background:#1F2937;
+    background:#080001;
   /*   text-align: center; */
   /*   margin: 0px auto; */
     line-height: 75px;
@@ -75,4 +75,5 @@ h3 {
     border-radius: 5px;
     font-family: CursedTimer;
     background: transparent; 
+    paddind: 5px 10px;
 }
